# sicp_client

./: .gitignore  README.md  config.example.yaml  config.example.yml  config.local.yaml  main.py  pyproject.toml  requirements.txt  sicp_client.py  sicp_service.py
ansible/: README.md  deploy.yml  inventory.example  inventory.ini  playbook.yml
ansible/group_vars/: all.yml  sicp_tablets.yml
ansible/roles/sicp/handlers/: main.yml
ansible/roles/sicp/tasks/: main.yml
ansible/roles/sicp/templates/: config.yml.j2  sicp.service.j2
ansible/roles/sicp_client/defaults/: main.yml
ansible/roles/sicp_client/handlers/: main.yml
ansible/roles/sicp_client/tasks/: main.yml
ansible/roles/sicp_client/templates/: config.yml.j2  sicp.service.j2
ansible/roles/sicp_service/defaults/: main.yml
ansible/roles/sicp_service/handlers/: main.yml
ansible/roles/sicp_service/tasks/: main.yml
ansible/roles/sicp_service/templates/: config.yaml.j2  (+1 more)
ansible/templates/: config.yaml.j2  sicp.service.j2
sicp_client/: __init__.py  client.py  config.py  logbuffer.py  logging_utils.py  manager.py  mqtt.py  protocol.py  service.py  tablet.py  utils.py  web.py
sicp_client/templates/: index.html
sicp_service/: __init__.py  config.py  devserver.py  logging_utils.py  main.py  manager.py  mqtt.py  presets.py  sicp.py  web.py
src/sicp/: __init__.py  cli.py  client.py  config.py  logging_utils.py  mqtt_bridge.py  protocol.py  service.py  tablet.py  transport.py  web.py
src/sicp/templates/: index.html  logs.html
templates/: base.html  index.html  logs.html
templates/static/: styles.css
